--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -353,7 +353,7 @@
                     <i class="bi bi-calendar-x"></i>
                     <h5>Review Time Off</h5>
                 </a>
-                <a href="{{ url_for('supervisor.overtime_distribution') }}" class="priority-card">
+                <a href="/supervisor/overtime-distribution" class="priority-card">
                     <i class="bi bi-clock-history"></i>
                     <h5>Overtime Distribution</h5>
                 </a>
