--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -444,7 +444,7 @@
                     <i class="bi bi-file-earmark-clock"></i>
                     <div class="action-content">
                         <h4>Overtime Template</h4>
-                        <p>13-week OT template</p>
+                        <p>Download template</p>
                     </div>
                 </a>
                 <a href="{{ url_for('employee_import.export_current_employees') }}" class="action-card">
